[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://quit.gd" type="Script" id=2]
[ext_resource path="res://play.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Start" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Whole" type="VBoxContainer" parent="ColorRect/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.5
margin_top = -247.5
margin_right = 307.5
margin_bottom = 247.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="ColorRect/Control/Whole"]
margin_right = 615.0
margin_bottom = 277.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/Control/Whole/Title"]
margin_right = 615.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "THE"
align = 1

[node name="Label2" type="Label" parent="ColorRect/Control/Whole/Title"]
margin_top = 55.0
margin_right = 615.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHOOTING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ColorRect/Control/Whole/Title"]
margin_top = 187.0
margin_right = 615.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RANGE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Control/Whole"]
margin_top = 281.0
margin_right = 615.0
margin_bottom = 301.0
rect_min_size = Vector2( 0, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Control/Whole"]
margin_top = 305.0
margin_right = 615.0
margin_bottom = 559.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Control/Whole/VBoxContainer"]
margin_right = 615.0
margin_bottom = 84.0
mouse_filter = 2
alignment = 1
script = ExtResource( 3 )

[node name="play5" type="Label" parent="ColorRect/Control/Whole/VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 248.0
margin_bottom = 84.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY
5 
TARGETS"
align = 1

[node name="play6" type="Label" parent="ColorRect/Control/Whole/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 363.0
margin_bottom = 84.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY
15
TARGETS"
align = 1

[node name="play7" type="Label" parent="ColorRect/Control/Whole/VBoxContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 478.0
margin_bottom = 84.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY
30
TARGETS"
align = 1

[node name="quit" type="Label" parent="ColorRect/Control/Whole/VBoxContainer"]
margin_top = 88.0
margin_right = 615.0
margin_bottom = 169.0
mouse_filter = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT
"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit2" type="Label" parent="ColorRect/Control/Whole/VBoxContainer"]
margin_top = 173.0
margin_right = 615.0
margin_bottom = 254.0
mouse_filter = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CREDITS
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play5" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play5_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play5" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play5_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play5" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play5_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play6" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play6_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play6" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play6_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play6" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play6_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play7" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play7_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play7" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play7_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Control/Whole/VBoxContainer/HBoxContainer/play7" to="ColorRect/Control/Whole/VBoxContainer/HBoxContainer" method="_on_play7_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Control/Whole/VBoxContainer/quit" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Control/Whole/VBoxContainer/quit" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Control/Whole/VBoxContainer/quit" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Control/Whole/VBoxContainer/quit2" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit2_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Control/Whole/VBoxContainer/quit2" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit2_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Control/Whole/VBoxContainer/quit2" to="ColorRect/Control/Whole/VBoxContainer/quit" method="_on_quit2_mouse_exited"]
